fullSandbox11072023/force-app/main/default/objects/Humanitarian_Donation__c/Humanitarian_Donation__c.object-meta.xml
<CustomObject>
    <description>This is being used to document and track humanitarian donation requests.</description>
    <label>Humanitarian Donation</label>
    <nameField>
        <displayFormat>HD-{0000}</displayFormat>
        <label>Humanitarian Donation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Humanitarian Donations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>