fullSandbox11072023/force-app/main/default/objects/Humanitarian_Donation__c/fields/Actual_Expense__c.field-meta.xml
<CustomField>
    <fullName>Actual_Expense__c</fullName>
    <formula>Product_In_Kind__c + Lifecycle_Product__c+Other_Category__c+Shipping__c+Technician_s__c</formula>
    <inlineHelpText>This is a total of all report values for Donation Support records associated to this record.</inlineHelpText>
    <label>Actual Expense</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>