fullSandbox11072023/force-app/main/default/objects/Humanitarian_Donation__c/fields/Authorized_Rep_of_Organization2__c.field-meta.xml
<CustomField>
    <fullName>Authorized_Rep_of_Organization2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Authorized Rep of Organization</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Humanitarian Donations (Authorized Rep of Organization)</relationshipLabel>
    <relationshipName>Humanitarian_Donations1</relationshipName>
    <type>Lookup</type>
</CustomField>