fullSandbox11072023/force-app/main/default/objects/Humanitarian_Donation__c/fields/Commercial_Supporter__c.field-meta.xml
<CustomField>
    <fullName>Commercial_Supporter__c</fullName>
    <label>Commercial Supporter</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Teleflex Medical</fullName>
            </value>
            <value>
                <fullName>Arrow International</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>