fullSandbox11072023/force-app/main/default/objects/Humanitarian_Donation__c/fields/Contact_Person_Coordinating_Education__c.field-meta.xml
<CustomField>
    <fullName>Contact_Person_Coordinating_Education__c</fullName>
    <label>Contact Person Coordinating Education</label>
    <length>255</length>
    <type>Text</type>
</CustomField>