fullSandbox11072023/force-app/main/default/objects/Humanitarian_Donation__c/fields/Contact_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Contact_Phone_Number__c</fullName>
    <label>Contact Phone Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>