fullSandbox11072023/force-app/main/default/objects/Humanitarian_Donation__c/fields/Determination_Date__c.field-meta.xml
<CustomField>
    <fullName>Determination_Date__c</fullName>
    <label>Determination Date</label>
    <type>Date</type>
</CustomField>