fullSandbox11072023/force-app/main/default/objects/Humanitarian_Donation__c/fields/Education_Record__c.field-meta.xml
<CustomField>
    <fullName>Education_Record__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Education Record</label>
    <referenceTo>Education_Record__c</referenceTo>
    <relationshipLabel>Humanitarian Donations</relationshipLabel>
    <relationshipName>Humanitarian_Donations</relationshipName>
    <type>Lookup</type>
</CustomField>