fullSandbox11072023/force-app/main/default/objects/Humanitarian_Donation__c/fields/Have_all_providers_received_education__c.field-meta.xml
<CustomField>
    <fullName>Have_all_providers_received_education__c</fullName>
    <label>Have all providers received education?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>