fullSandbox11072023/force-app/main/default/objects/Humanitarian_Donation__c/fields/Have_you_received_support_last_2_years__c.field-meta.xml
<CustomField>
    <fullName>Have_you_received_support_last_2_years__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Have you received support last 2 years?</label>
    <type>Checkbox</type>
</CustomField>