fullSandbox11072023/force-app/main/default/objects/Humanitarian_Donation__c/fields/How_many_patients_benefit_from_prior__c.field-meta.xml
<CustomField>
    <fullName>How_many_patients_benefit_from_prior__c</fullName>
    <label>How many patients benefit from prior?</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>