fullSandbox11072023/force-app/main/default/objects/Humanitarian_Donation__c/fields/If_you_received_support_describe__c.field-meta.xml
<CustomField>
    <fullName>If_you_received_support_describe__c</fullName>
    <label>If you received support, describe.</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>