fullSandbox11072023/force-app/main/default/objects/Humanitarian_Donation__c/fields/LOA_Complete__c.field-meta.xml
<CustomField>
    <fullName>LOA_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>LOA Complete</label>
    <type>Checkbox</type>
</CustomField>