fullSandbox11072023/force-app/main/default/objects/Humanitarian_Donation__c/fields/LOA_Sent__c.field-meta.xml
<CustomField>
    <fullName>LOA_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>LOA Sent</label>
    <type>Checkbox</type>
</CustomField>