fullSandbox11072023/force-app/main/default/objects/Humanitarian_Donation__c/fields/Location_of_Mission__c.field-meta.xml
<CustomField>
    <fullName>Location_of_Mission__c</fullName>
    <label>Location of Mission</label>
    <length>255</length>
    <type>Text</type>
</CustomField>