fullSandbox11072023/force-app/main/default/objects/Humanitarian_Donation__c/fields/Needs_Assessment__c.field-meta.xml
<CustomField>
    <fullName>Needs_Assessment__c</fullName>
    <label>Needs Assessment</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>