fullSandbox11072023/force-app/main/default/objects/Humanitarian_Donation__c/fields/Number_of_HCPs_Participating__c.field-meta.xml
<CustomField>
    <fullName>Number_of_HCPs_Participating__c</fullName>
    <label>Number of HCPs Participating</label>
    <length>255</length>
    <type>Text</type>
</CustomField>