fullSandbox11072023/force-app/main/default/objects/Humanitarian_Donation__c/fields/Outcomes_from_prior__c.field-meta.xml
<CustomField>
    <fullName>Outcomes_from_prior__c</fullName>
    <label>Outcomes from prior</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>