fullSandbox11072023/force-app/main/default/objects/Humanitarian_Donation__c/fields/Overview_of_the_Sponsoring_Agency__c.field-meta.xml
<CustomField>
    <fullName>Overview_of_the_Sponsoring_Agency__c</fullName>
    <label>Overview of the Sponsoring Agency</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>