fullSandbox11072023/force-app/main/default/objects/Humanitarian_Donation__c/fields/Procedure_s_to_be_performed__c.field-meta.xml
<CustomField>
    <fullName>Procedure_s_to_be_performed__c</fullName>
    <label>Procedure(s) to be performed</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>