fullSandbox11072023/force-app/main/default/objects/Humanitarian_Donation__c/fields/Product_In_Kind__c.field-meta.xml
<CustomField>
    <fullName>Product_In_Kind__c</fullName>
    <inlineHelpText>This is calculated based on the report value for any related Donation Support objects that show a category of Product In-Kind.</inlineHelpText>
    <label>Product In-Kind</label>
    <summarizedField>Donation_Support__c.Report_Value_in_USD__c</summarizedField>
    <summaryFilterItems>
        <field>Donation_Support__c.Category__c</field>
        <operation>equals</operation>
        <value>Product In-Kind</value>
    </summaryFilterItems>
    <summaryForeignKey>Donation_Support__c.Humanitarian_Donation__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>