fullSandbox11072023/force-app/main/default/objects/Humanitarian_Donation__c/fields/Product_Reconciliation_Received__c.field-meta.xml
<CustomField>
    <fullName>Product_Reconciliation_Received__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Compliance Check Here</description>
    <label>Product Reconciliation Received</label>
    <type>Checkbox</type>
</CustomField>