fullSandbox11072023/force-app/main/default/objects/Humanitarian_Donation__c/fields/Product_Reconciliation_Received_Date__c.field-meta.xml
<CustomField>
    <fullName>Product_Reconciliation_Received_Date__c</fullName>
    <description>Compliance Check Here</description>
    <label>Product Reconciliation Received Date</label>
    <type>Date</type>
</CustomField>