fullSandbox11072023/force-app/main/default/objects/Humanitarian_Donation__c/fields/Program_Synopsis_Date_Received__c.field-meta.xml
<CustomField>
    <fullName>Program_Synopsis_Date_Received__c</fullName>
    <label>Program Synopsis Date Received</label>
    <type>Date</type>
</CustomField>