fullSandbox11072023/force-app/main/default/objects/Humanitarian_Donation__c/fields/Request_Received_Date__c.field-meta.xml
<CustomField>
    <fullName>Request_Received_Date__c</fullName>
    <label>Request Received Date</label>
    <type>Date</type>
</CustomField>