fullSandbox11072023/force-app/main/default/objects/Humanitarian_Donation__c/fields/Requesting_Individual_Email__c.field-meta.xml
<CustomField>
    <fullName>Requesting_Individual_Email__c</fullName>
    <formula>Requesting_Individual__r.Email</formula>
    <label>Requesting Individual Email</label>
    <type>Text</type>
</CustomField>