fullSandbox11072023/force-app/main/default/objects/Humanitarian_Donation__c/fields/Requesting_Individual_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Requesting_Individual_Phone_Number__c</fullName>
    <formula>Requesting_Individual__r.Phone</formula>
    <label>Requesting Individual Phone Number</label>
    <type>Text</type>
</CustomField>