fullSandbox11072023/force-app/main/default/objects/Humanitarian_Donation__c/fields/Requesting_Organization__c.field-meta.xml
<CustomField>
    <fullName>Requesting_Organization__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Requesting Organization</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Humanitarian Donations</relationshipLabel>
    <relationshipName>Humanitarian_Donations</relationshipName>
    <type>Lookup</type>
</CustomField>