fullSandbox11072023/force-app/main/default/objects/Humanitarian_Donation__c/fields/Technician_s__c.field-meta.xml
<CustomField>
    <fullName>Technician_s__c</fullName>
    <inlineHelpText>This is calculated based on the report value for any related Donation Support objects that show a category of Technician(s).</inlineHelpText>
    <label>Technician(s)</label>
    <summarizedField>Donation_Support__c.Report_Value_in_USD__c</summarizedField>
    <summaryFilterItems>
        <field>Donation_Support__c.Category__c</field>
        <operation>equals</operation>
        <value>Technician(s)</value>
    </summaryFilterItems>
    <summaryForeignKey>Donation_Support__c.Humanitarian_Donation__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>