fullSandbox11072023/force-app/main/default/objects/Humanitarian_Donation__c/fields/Trip_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Trip_Start_Date__c</fullName>
    <label>Trip Start Date</label>
    <type>Date</type>
</CustomField>