fullSandbox11072023/force-app/main/default/objects/Humanitarian_Donation__c/fields/Type_of_Medical_Outreach__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Medical_Outreach__c</fullName>
    <label>Type of Medical Outreach</label>
    <length>255</length>
    <type>Text</type>
</CustomField>