fullSandbox11072023/force-app/main/default/objects/Humanitarian_Donation__c/fields/Who_will_educate_inexperienced_users__c.field-meta.xml
<CustomField>
    <fullName>Who_will_educate_inexperienced_users__c</fullName>
    <label>Who will educate inexperienced users?</label>
    <type>TextArea</type>
</CustomField>