fullSandbox11072023/force-app/main/default/objects/Humanitarian_Donation__c/recordTypes/Humanitarian_Donation_Master.recordType-meta.xml
<RecordType>
    <fullName>Humanitarian_Donation_Master</fullName>
    <active>true</active>
    <label>Humanitarian Donation Master</label>
</RecordType>